--- a/src/Css/chat.css
+++ b/src/Css/chat.css
@@ -71,6 +71,7 @@ p {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
+  color: white;
 }
 .para_message {
   width: 90% !important;
@@ -80,6 +81,11 @@ p {
 .dateInfo {
   font-size: smaller;
   color: rgb(175, 175, 175);
+}
+.dateInfoLeft {
+  font-size: smaller;
+  color: rgb(175, 175, 175);
+  margin-left: 53% !important;
 }
 .dateInfoL {
   font-size: smaller;
