--- a/src/Css/login.css
+++ b/src/Css/login.css
@@ -1,64 +1,105 @@
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 1.2em;
-    margin-top: -5%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2em;
+  margin-top: -5%;
 }
 a {
-    text-decoration: none;
-    padding-bottom: 1em;
+  text-decoration: none;
+  padding-bottom: 1em;
 }
 
 .formContenair {
-    position: relative;
-    min-height: 100vh;
-    overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
 input {
-    height: 1.8em;
-    outline: none;
-    border: none;
-    background-color: rgb(238, 238, 238);
-    width: 15em;
-    height: 2em;
-    border-radius: 5px;
+  height: 1.8em;
+  outline: none;
+  border: none;
+  background-color: rgb(238, 238, 238);
+  width: 15em;
+  height: 2em;
+  border-radius: 5px;
 }
 
 .icoMessage {
-    width: 40px;
+  width: 40px;
 }
 .formContenair > div {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .formContenair2 {
-    background-color: aliceblue;
-    border-radius: 20px;
-    padding-right: 15em;
-    padding-left: 3em;
-    padding-top: 2em;
-    padding-bottom: 1em;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  background-color: aliceblue;
+  border-radius: 20px;
+  padding-right: 15em;
+  padding-left: 3em;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .formContenair > div div {
-    width: 50%;
+  width: 50%;
 }
 
 .imageLogin {
-    width: 400px;
+  width: 400px;
 }
 button {
-    background-color: rgba(73, 113, 172, 1);
-    border: none;
-    color: white;
-    border-radius: 5px;
+  background-color: rgba(73, 113, 172, 1);
+  border: none;
+  color: white;
+  border-radius: 5px;
+}
+label {
+  color: red;
+  font-size: 10px;
+  margin-top: -8%;
+}
+.titre_connect {
+  margin-bottom: 10%;
+}
+
+.loader {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loader:after {
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  width: 0;
+  height: 0;
+  margin: 8px;
+  box-sizing: border-box;
+  border: 32px solid rgb(238, 0, 0);
+  border-color: rgb(230, 230, 230) transparent rgb(230, 230, 230) transparent;
+  animation: loader 1.2s infinite;
+}
+
+@keyframes loader {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  100% {
+    transform: rotate(1800deg);
+  }
 }
