--- a/src/components/navigation.css
+++ b/src/components/navigation.css
@@ -31,8 +31,9 @@
   padding-bottom: 2%;
 }
 
-img {
-  width: 60px;
+.image_user {
+  width: 50px !important;
+  height: 50px !important;
   border-radius: 40px;
 }
 
